# pydca

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INTEGRATIONS.md  README.md  TEST_CLEANUP_PLAN.md  profiling_results.txt  pyproject.toml
.github/workflows/: ci.yml
decline_curve/: __init__.py  __main__.py  benchmarks.py  catalog.py  catalog_example.yaml  config.py  dca.py  decline_variants.py  deep_learning.py  eur_estimation.py  fit_diagnostics.py  fitting.py  forecast.py  forecast_arima.py  forecast_chronos.py  forecast_deepar.py  forecast_tft.py  forecast_timesfm.py  history_matching.py  integrations.py  ipr.py  logging_config.py  material_balance.py  model_comparison.py  model_interface.py  model_registry.py  monte_carlo.py  multiphase.py  multiphase_flow.py  notebook_runner.py  parameter_resample.py  physics_informed.py  physics_reserves.py  plot.py  portfolio.py  probabilistic_forecast.py  pvt.py  reports.py  risk_report.py  rta.py  (+8 more)
docs/: MONTE_CARLO.md  PRUNING_PLAYBOOK.md  index.rst
docs/cookbook/: compare_completions.rst  config_files.rst  index.rst  portfolio_analysis.rst  test_price_deck.rst  update_forecast.rst
docs/workflows/: field_analysis.rst  single_well_workflow.rst  state_scale_workflow.rst
examples/: 01_basic_dca_analysis.ipynb  03_real_bakken_well_analysis.ipynb  09_eur_kriging_example.py  10_ecosystem_integration_example.py  11_scenarios_and_portfolio_example.py  12_pdf_report_example.py  13_physics_informed_dca.py  README.md  README_CLI_CONFIG.md  cli_example.sh  config_example.toml  config_workflow_example.py  run_benchmarks.py
examples/notebooks/: 01_comprehensive_dca_fundamentals.ipynb  02_physics_informed_dca.ipynb  03_economic_evaluation.ipynb  04_multiphase_forecasting.ipynb  05_configuration_based_workflows.ipynb  README.md
scripts/: run_notebooks.py
tests/: test___main__.py  test_config.py  test_deep_learning.py  test_evaluate.py  test_forecast.py  test_forecast_arima.py  test_forecast_tft.py  test_forecast_timesfm.py  test_history_matching_multiphase_physics.py  test_ipr.py  test_material_balance.py  test_multiphase.py  test_physics_informed.py  test_plot.py  test_portfolio.py  test_property_tests.py  test_pvt.py  test_regression.py  test_rta_welltest_vlp.py  test_scenarios.py
