[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "decline-curve"
version = "0.2.1"
description = "Decline Curve Analysis: A comprehensive Python library for decline curve analysis with multi-phase forecasting, data utilities, and ML models"
readme = "README.md"
license = "Apache-2.0"
authors = [
  { name = "Kyle T. Jones", email = "kyletjones@gmail.com" }
]
maintainers = [
  { name = "Kyle T. Jones", email = "kyletjones@gmail.com" }
]
requires-python = ">=3.12"
keywords = [
  "decline-curve-analysis",
  "petroleum-engineering",
  "oil-and-gas",
  "production-forecasting",
  "arps-decline",
  "reserves-estimation",
  "time-series",
  "machine-learning",
  "economic-analysis"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed"
]
dependencies = [
  "numpy>=1.23",
  "pandas>=2.0",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "tqdm>=4.66",
  "numpy-financial>=1.0",
  "requests>=2.25",
  "xlrd>=2.0",
  "numba>=0.58",
  "joblib>=1.3"
]

[project.optional-dependencies]
# Statistical models (ARIMA, etc.)
stats = [
    "statsmodels>=0.14",
]

# Spatial analysis (kriging)
spatial = [
    "pykrige>=1.7.0",
    "scikit-learn>=1.3",
]

# Integration with ecosystem libraries
integrations = [
    "pygeomodeling>=0.3.0",
    "geosuite>=0.1.0",
    "signalplot>=0.1.0",
]

# Large language models (Chronos, TimesFM)
llm = [
    "transformers>=4.41",
    "torch>=2.0",
    "accelerate>=0.29",
    "einops>=0.7",
]

# Machine learning models (DeepAR, TFT, etc.)
ml = [
    "transformers>=4.41",
    "torch>=2.0",
    "accelerate>=0.29",
    "einops>=0.7",
    "scikit-learn>=1.3"
]
benchmark = [
    "mlflow>=2.0",
    "pyyaml>=6.0"
]

# Configuration file support
config = [
    "tomli>=2.0.0; python_version < '3.11'",
    "pyyaml>=6.0",
]

# PDF report generation
reports = [
    "reportlab>=4.0.0",
]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "pytest-xdist>=3.0",
  "black>=23.0",
  "isort>=5.12",
  "flake8>=6.0",
  "mypy>=1.0",
  "types-requests>=2.32",
  "pre-commit>=3.0",
  "line_profiler>=4.0"
]
docs = [
  "sphinx>=7.0",
  "sphinx-rtd-theme>=2.0",
  "sphinx-autodoc-typehints>=1.20"
]
examples = [
  "jupyter>=1.0",
  "notebook>=7.0",
  "ipykernel>=6.0"
]
all = [
  "decline-curve[stats,llm,ml,spatial,integrations,dev,docs,examples]"
]

[project.urls]
Homepage = "https://github.com/kylejones200/decline-curve"
Documentation = "https://decline-curve.readthedocs.io/"
Repository = "https://github.com/kylejones200/decline-curve"
"Bug Tracker" = "https://github.com/kylejones200/decline-curve/issues"
Changelog = "https://github.com/kylejones200/decline-curve/blob/main/CHANGELOG.md"

[project.scripts]
dca = "decline_curve.__main__:main"

[tool.setuptools.packages.find]
include = ["decline_curve*"]
exclude = ["ndic_raw*"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | venv
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
show_error_codes = true
pretty = true
disable_error_code = ["import-untyped"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["."]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
  "-v",
  "-ra",
  "--tb=short",
  "--strict-markers",
  "--strict-config",
  "--color=yes",
  "--cov=decline_curve",
  "--cov-report=term-missing",
  "--cov-report=html",
  "--disable-warnings",
  "--durations=10",
  "--maxfail=5",
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests as integration tests",
  "unit: marks tests as unit tests",
]
filterwarnings = [
  "ignore::UserWarning",
  "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["decline_curve"]
omit = [
  "*/tests/*",
  "*/test_*.py",
  "*/__pycache__/*",
  "*/venv/*",
  "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@abstractmethod",
]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    ".eggs",
    "*.egg",
    "build",
    "dist",
    "examples",
    "benchmarks",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
    "E402",  # Module level import not at top (if intentional)
    "E501",  # Line too long (handled by formatter)
    "N806",  # Variable should be lowercase (if using stats conventions)
    "N803",  # Argument should be lowercase (if using stats conventions)
]
